--- a/src/app/generales/header/header.component.html
+++ b/src/app/generales/header/header.component.html
@@ -12,11 +12,12 @@
       <ul class="nav col-12 col-lg-auto me-lg-auto mb-2 justify-content-center mb-md-0">
         <li><a href="#" class="nav-link px-2 text-secondary" >Home</a></li>
       </ul>
-
+      <div class="me-auto d-flex flex-row">
       <form class="col-12 col-lg-auto mb-3 mb-lg-0 me-lg-3" role="search">
-        <input type="search" class="form-control form-control-dark text-bg-dark" placeholder="Search..." aria-label="Search">
+        <input type="search" class="form-control form-control-dark text-bg-dark" placeholder="Search..." aria-label="Search" [(ngModel)]="busqueda" [ngModelOptions]="{standalone: true}">
       </form>
-
+      <button type="button" class="btn btn-outline-light me-2" (click)="buscar()">Buscar</button>
+      </div>
       <div class="text-end">
         <button type="button" class="btn btn-outline-light me-2" (click)="irALogIn()">Login</button>
       </div>
