--- a/src/app/productos/producto/producto.component.html
+++ b/src/app/productos/producto/producto.component.html
@@ -45,7 +45,7 @@
 <div class="d-flex flex-row-reverse">
 <div class="d-flex flex-column ">
 <h5 class="ps-4">Precio:</h5>
-<h5 >${{ producto?.precio }} uSd</h5>
+<h5 >${{ precio.peso }} uSd{{ precio.dolar }}</h5>
 <a href="../components/navbar/" role="button">
     <button class="btn btn-lg btn-primary">
 Comprar&raquo;
