antes del popup

--- a/src/app/productos/listado-productos/listado-productos.component.html
+++ b/src/app/productos/listado-productos/listado-productos.component.html
@@ -1,5 +1,5 @@
 <div >
-<app-producto *ngFor="let unProducto of productos" [producto]="unProducto"> </app-producto>
+<app-producto *ngFor="let unProducto of productos" [producto]="unProducto" [cotizacion]="cotizacion" > </app-producto>
 <div class="  mt-3">
   <button class="btn cal-btn " type="button" (click)="atras()">
     <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-arrow-bar-left" viewBox="0 0 16 16">
